# edinet-pit

./: .gitignore  README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: fetch_toyota.py
src/edinet_pit/: __init__.py  client.py  parse.py
tests/: test_parse.py
